TestCases/Errors/threaded_movement/observations/win_02_obs.spm
 obs   15-6   0.000651762074309893 
 obs   16-6   0.000755865169761163 
 obs   14-7   0.000890909648395187 
 obs   15-7   0.000364360631358691 
 obs   14-8   0.00108088483744665 
 obs   15-8   0.000681702243461029 
 obs   13-9   0.000784888397148428 
 obs   14-9   0.000788102194651235 
 obs   15-9   0.000337573568357711 
 obs   14-10   0.00057593137300976 
 obs   5-11   0.00901320168525978 
 obs   4-12   0.00232867598137059 
 obs   9-12   0.00566666666666667 
 obs   5-15   0.00469251336898396 
 obs   6-15   0.00497699870462019 
 obs   11-19   0.0139285714285714 
 obs   11-20   0.0139285714285714 
 error_value   15-6   0 
 error_value   16-6   0 
 error_value   14-7   0 
 error_value   15-7   0 
 error_value   14-8   0 
 error_value   15-8   0 
 error_value   13-9   0 
 error_value   14-9   0 
 error_value   15-9   0 
 error_value   14-10   0 
 error_value   5-11   0 
 error_value   4-12   0 
 error_value   9-12   0 
 error_value   5-15   0 
 error_value   6-15   0 
 error_value   11-19   0 
 error_value   11-20   0 
